# simpler-grants-protocol

./: .gitignore  AUDIT_EXCEPTIONS.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  README.md  SPIKE-FINDINGS.md  code.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.py
examples/ca-opportunity-example/: .gitignore  Makefile  README.md  api.py  pyproject.toml
examples/ca-opportunity-example/routers/: __init__.py  grants.py  opportunities.py
examples/ca-opportunity-example/scripts/: generate_openapi.py
examples/ca-opportunity-example/services/: opportunity.py
examples/ca-opportunity-example/src/ca_common_grants/: __init__.py  api.py
examples/ca-opportunity-example/src/ca_common_grants/data/: .ca_grants_sample.json.swp  111c8c88-21f6-453c-ae2c-b4785a0624f5.json  README.md  ca_grants_sample.json
examples/ca-opportunity-example/src/ca_common_grants/routers/: opportunities.py
examples/ca-opportunity-example/src/ca_common_grants/scripts/: __init__.py  generate_openapi.py
examples/ca-opportunity-example/src/ca_common_grants/services/: __init__.py  opportunity.py
examples/ca-opportunity-example/src/ca_common_grants/transform/: mapping.py  transformer.py
examples/ca-opportunity-example/src/ca_common_grants/utils/: date_transform.py  opp_extract.py  opp_map_transform.py  opp_transform.py
examples/ca-opportunity-example/src/common_grants/: constants.py
examples/ca-opportunity-example/src/common_grants/data/: README.md
examples/ca-opportunity-example/src/common_grants/routes/: opportunities.py
examples/ca-opportunity-example/src/common_grants/schemas/: __init__.py  responses.py
examples/ca-opportunity-example/src/common_grants/services/: opportunity.py  utils.py
examples/ca-opportunity-example/src/common_grants/utils/: __init__.py  date_transform.py  opp_data_source.py  opp_transform.py
examples/ca-opportunity-example/tests/: __init__.py  conftest.py  ruff.toml  test_api.py  test_date_transform.py  test_opp_data_source.py  test_opp_extract.py  test_opp_transform.py  test_routers.py  test_scripts.py  test_services.py  test_transformer.py
examples/ca-opportunity-example/tests/common_grants/routes/: __init__.py  test_opportunities.py
examples/ca-opportunity-example/tests/common_grants/services/: test_opportunity.py  test_utils.py
examples/ca-opportunity-example/tests/common_grants/utils/: test_date_transform.py  test_opp_data_source.py  test_opp_transform.py
examples/ca-opportunity-example/transform/: __init__.py  mapping.py  transformer.py
lib/python-sdk/: .coverage  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  conftest.py  generate_models.sh  package.json  pyproject.toml  pyrightconfig.json  setup.py
lib/python-sdk/.github/workflows/: python-sdk.yml
lib/python-sdk/common_grants/: __init__.py
lib/python-sdk/common_grants/schemas/: __init__.py  base.py  fields.py
lib/python-sdk/common_grants/schemas/models/: __init__.py  opp_base.py  opp_funding.py  opp_status.py  opp_timeline.py
lib/python-sdk/common_grants_sdk/: __init__.py  generate.py  plugin.py  types.py
lib/python-sdk/common_grants_sdk/client/: README.md  __init__.py  auth.py  base.py  client.py  config.py  exceptions.py  opportunities.py  opportunity.py  pagination.py  response.py  results.py  setenv.sh  types.py
lib/python-sdk/common_grants_sdk/client/examples/: get_opportunity.py  list_opportuntites.py
lib/python-sdk/common_grants_sdk/extensions/: README.md  __init__.py  filters.py  generate.py  plugin.py  routes.py  schema.py  specs.py  transforms.py  types.py
lib/python-sdk/common_grants_sdk/schemas/: README.md  __init__.py  base.py  fields.py  pagination.py  sorting.py
lib/python-sdk/common_grants_sdk/schemas/fields/: __init__.py  custom.py  event.py  metadata.py
lib/python-sdk/common_grants_sdk/schemas/filters/: __init__.py  base.py  date_filters.py
lib/python-sdk/common_grants_sdk/schemas/marshmallow/: __init__.py  generated_schema.py  generated_schema.py.OLD
lib/python-sdk/common_grants_sdk/schemas/models/: __init__.py  opp_base.py  opp_funding.py  opp_status.py  opp_timeline.py  opp_transformer.py
lib/python-sdk/common_grants_sdk/schemas/pydantic/: __init__.py  base.py  pagination.py  sorting.py  types.py
lib/python-sdk/common_grants_sdk/schemas/responses/: __init__.py  opportunity.py  (+1 more)
lib/python-sdk/common_grants_sdk/schemas_marshmallow/: __init__.py  generated_schema.py
lib/python-sdk/common_grants_sdk/utils/: custom_fields.py  generate_mm_schema.py  json.py  transformation.py
lib/python-sdk/examples/: README.md  consumer_search_with_filters.py  custom_fields.py  custom_filters.py  extensions.py  get_custom_fields.py  get_opportunity.py  grants_gov_custom_filters.py  grants_gov_transforms.py  list_opportunities.py  list_opportunity.py  list_opportuntites.py  mock_api_server.py  plugin_custom_fields.py  plugins.py  search_opportunity.py  transforms.py  typed_custom_filters.py  typed_custom_filters_failures.py  typed_filters.py
lib/python-sdk/tests/: test_base.py  test_fields.py  test_opportunity.py  test_opportunity_transform.py
lib/python-sdk/tests/client/: __init__.py  test_auth.py  test_base.py  test_client.py  test_config.py  test_opportunities.py  test_results.py  test_typed_custom_filters_example.py
lib/python-sdk/tests/extensions/: test_filters.py  test_plugin.py  test_schema.py  test_transforms.py  test_types.py
lib/python-sdk/tests/schemas/: test_applicant_type.py  test_base.py  test_fields.py  test_filters.py  test_marshmallow.py  test_opportunity.py  test_pagination.py  test_plugin_registry.py  test_responses.py  test_sorting.py
lib/python-sdk/tests/utils/: test_custom_fields.py  test_get_custom_fields.py  test_merge_extensions.py  test_plugin_generator.py  test_transformation.py
lib/python-sdk/utils/: generate_mm_schema.py
lib/python-sdk/validators/: resolver.py  validate.py
templates/fast-api/: DEVELOPMENT.md  Makefile  README.md  openapi.yaml  pyproject.toml
templates/fast-api/src/common_grants/: api.py  constants.py
templates/fast-api/tests/: __init__.py  conftest.py
(+1381 files in other folders)
