[tool.poetry]
name = "common-grants-python-sdk"
version = "0.1.0"
description = "Python SDK for the CommonGrants protocol"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common_grants"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.4.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
