[tool.poetry]
name = "common-grants-sdk"
version = "0.4.1"
description = "Python SDK for the CommonGrants protocol"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common_grants_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.0"
marshmallow = "^3.20.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.4.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.11.0"
tomlkit = "^0.13.3"
tomlq = "^0.1.0"
types-pyyaml = "^6.0.12.20250915"
datamodel-code-generator = "^0.43.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
