[tool.poetry]
name = "common-grants-sdk"
version = "0.6.2"
description = "Python SDK for the CommonGrants protocol"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common_grants_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.0"
marshmallow = "^3.20.0"
httpx = ">=0.27,<0.29"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
mypy = "^1.4.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = ">=0.11,<0.16"
tomlkit = ">=0.13.3,<0.15.0"
tomlq = "^0.1.0"
types-pyyaml = "^6.0.12.20250915"
datamodel-code-generator = ">=0.43.1,<0.57.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
